--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<% include ./partials/head.ejs %>
+    <% include ./partials/head.ejs %>
 </head>
 <body>
 
 <!-- Navigation -->
-<% include ./partials/head.ejs %>
+<% include ./partials/navbar.ejs %>
 <!-- Page Content -->
 <main class="container">
 
