--- a/src/views/topics/index.ejs
+++ b/src/views/topics/index.ejs
@@ -10,6 +10,7 @@
     <% include ../static/partials/navbar.ejs %>
 
     <h1>Topics</h1>
+    <a href="/topics/new" class="btn btn-success" style="margin: 5px">New Topic</a>
 
     <ul class="list-group">
         <!-- #1 -->
