Fully implemented CRUD on Post functionality

--- a/src/views/posts/show.ejs
+++ b/src/views/posts/show.ejs
@@ -9,6 +9,7 @@
 <main class="container">
     <h1><%= post.title %></h1>
     <form style="display:initial" action="/topics/<%= post.topicId %>/posts/<%= post.id %>/destroy" method="post">
+        <a href="/topics/<%= post.topicId %>/posts/<%= post.id %>/edit" class="btn btn-warning">Edit</a>
         <button type="submit" class="btn btn-danger">Delete</button>
     </form>
 
