--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -14,7 +14,7 @@
     <header class="jumbotron my-4">
         <h1 class="display-3">Welcome to Bloccit</h1>
         <p class="lead">An application for users to share information.</p>
-        <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+        <a href="#" class="btn btn-primary btn-lg" onclick="alert('User `Sign-Up` is not available at this time.')">Sign up</a>
     </header>
 
     <!-- Page Features -->
